--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,7 +522,7 @@ main {
   margin-bottom: 2px;
 }
 
-.contact-info :is(.contact-link, time, address) {
+.contact-info :is(.contact-link, time, address, span) {
   color: var(--white-2);
   font-size: var(--fs-7);
 }
