--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@
   --smoky-black: hsl(0, 0%, 2%);
   --white-1: hsl(0, 0%, 95%);
   --white-2: hsl(0, 0%, 93%);
+  --white-3: hsla(0, 0%, 93%, 0.933);
   --orange-yellow-crayola: hsl(45, 82%, 43%);
   --vegas-gold: hsl(45, 54%, 53%);
   --light-gray: hsl(0, 0%, 79%);
@@ -522,8 +523,13 @@ main {
   margin-bottom: 2px;
 }
 
-.contact-info :is(.contact-link, time, address, span) {
+.contact-info :is(.contact-link, time, address) {
   color: var(--white-2);
+  font-size: var(--fs-7);
+}
+
+.contact-info span{
+  color: var(--white-3);
   font-size: var(--fs-7);
 }
 
